// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group - component render should render correctly 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly placeholder 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      >
        some placeholder
      </span>
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly with items - isDisabled 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle pf-m-disabled ins-c-group-menu-toggle"
      disabled=""
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly with items 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly with items and default value 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly with items and selected value 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render should render correctly with selectable group 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render show more should render correctly with items and custom props 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render show more should render correctly with items and custom text 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render show more should render correctly with items and default text 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Group - component render show more should render correctly with items and different variant 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      aria-label="Group filter"
      class="pf-c-menu-toggle ins-c-group-menu-toggle"
      type="button"
    >
      <span
        class="pf-c-menu-toggle__text"
      />
      <span
        class="pf-c-menu-toggle__controls"
      >
        <span
          class="pf-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;
